tests/baselines/reference/overloadResolutionClassConstructors(strict=true).errors.txt
overloadResolutionClassConstructors.ts(2,13): error TS7008: Member 'n' implicitly has an 'any' type.
overloadResolutionClassConstructors.ts(4,12): error TS2564: Property 's' has no initializer and is not definitely assigned in the constructor.
overloadResolutionClassConstructors.ts(7,13): error TS7008: Member 'm' implicitly has an 'any' type.
overloadResolutionClassConstructors.ts(10,13): error TS7008: Member 'm' implicitly has an 'any' type.
overloadResolutionClassConstructors.ts(13,13): error TS7008: Member 'm' implicitly has an 'any' type.
overloadResolutionClassConstructors.ts(24,9): error TS2769: No overload matches this call.
  Overload 1 of 2, '(s: string): fn1', gave the following error.
    Argument of type 'undefined' is not assignable to parameter of type 'string'.
  Overload 2 of 2, '(s: number): fn1', gave the following error.
    Argument of type 'undefined' is not assignable to parameter of type 'number'.
overloadResolutionClassConstructors.ts(27,9): error TS2769: No overload matches this call.
  Overload 1 of 2, '(s: string): fn1', gave the following error.
    Argument of type '{}' is not assignable to parameter of type 'string'.
  Overload 2 of 2, '(s: number): fn1', gave the following error.
    Argument of type '{}' is not assignable to parameter of type 'number'.
overloadResolutionClassConstructors.ts(36,13): error TS2769: No overload matches this call.
  Overload 1 of 2, '(s: string, n: number): fn2<Date>', gave the following error.
    Argument of type 'number' is not assignable to parameter of type 'string'.
  Overload 2 of 2, '(n: number, t: Date): fn2<Date>', gave the following error.
    Argument of type 'undefined' is not assignable to parameter of type 'Date'.
overloadResolutionClassConstructors.ts(60,9): error TS2558: Expected 3 type arguments, but got 1.
overloadResolutionClassConstructors.ts(61,9): error TS2558: Expected 3 type arguments, but got 2.
overloadResolutionClassConstructors.ts(65,9): error TS2558: Expected 3 type arguments, but got 4.
overloadResolutionClassConstructors.ts(73,25): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
overloadResolutionClassConstructors.ts(74,9): error TS2344: Type 'number' does not satisfy the constraint 'string'.
overloadResolutionClassConstructors.ts(75,9): error TS2344: Type 'number' does not satisfy the constraint 'string'.
overloadResolutionClassConstructors.ts(79,9): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
overloadResolutionClassConstructors.ts(80,9): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
overloadResolutionClassConstructors.ts(81,13): error TS2345: Argument of type 'null' is not assignable to parameter of type 'number'.
overloadResolutionClassConstructors.ts(84,9): error TS2344: Type 'boolean' does not satisfy the constraint 'string'.
overloadResolutionClassConstructors.ts(87,9): error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
overloadResolutionClassConstructors.ts(88,9): error TS2345: Argument of type 'null' is not assignable to parameter of type 'string'.
overloadResolutionClassConstructors.ts(94,21): error TS2322: Type 'undefined' is not assignable to type 'fn5'.
overloadResolutionClassConstructors.ts(94,21): error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
overloadResolutionClassConstructors.ts(96,18): error TS2339: Property 'toFixed' does not exist on type 'string'.
overloadResolutionClassConstructors.ts(98,18): error TS2339: Property 'blah' does not exist on type 'string'.


==== overloadResolutionClassConstructors.ts (24 errors) ====
    class SomeBase {
        private n;
                ~
!!! error TS7008: Member 'n' implicitly has an 'any' type.
    
        public s: string;
               ~
!!! error TS2564: Property 's' has no initializer and is not definitely assigned in the constructor.
    }
    class SomeDerived1 extends SomeBase {
        private m;
                ~
!!! error TS7008: Member 'm' implicitly has an 'any' type.
    }
    class SomeDerived2 extends SomeBase {
        private m;
                ~
!!! error TS7008: Member 'm' implicitly has an 'any' type.
    }
    class SomeDerived3 extends SomeBase {
        private m;
                ~
!!! error TS7008: Member 'm' implicitly has an 'any' type.
    }
    
    
    // Ambiguous call picks the first overload in declaration order
    class fn1 {
        constructor(s: string);
        constructor(s: number);
        constructor() { }
    }
    
    new fn1(undefined);
            ~~~~~~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(s: string): fn1', gave the following error.
!!! error TS2769:     Argument of type 'undefined' is not assignable to parameter of type 'string'.
!!! error TS2769:   Overload 2 of 2, '(s: number): fn1', gave the following error.
!!! error TS2769:     Argument of type 'undefined' is not assignable to parameter of type 'number'.
    
    // No candidate overloads found
    new fn1({}); // Error
            ~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(s: string): fn1', gave the following error.
!!! error TS2769:     Argument of type '{}' is not assignable to parameter of type 'string'.
!!! error TS2769:   Overload 2 of 2, '(s: number): fn1', gave the following error.
!!! error TS2769:     Argument of type '{}' is not assignable to parameter of type 'number'.
    
    // Generic and non - generic overload where generic overload is the only candidate when called with type arguments
    class fn2<T> {
        constructor(s: string, n: number);
        constructor(n: number, t: T);
        constructor() { }
    }
    
    var d = new fn2<Date>(0, undefined);
                ~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(s: string, n: number): fn2<Date>', gave the following error.
!!! error TS2769:     Argument of type 'number' is not assignable to parameter of type 'string'.
!!! error TS2769:   Overload 2 of 2, '(n: number, t: Date): fn2<Date>', gave the following error.
!!! error TS2769:     Argument of type 'undefined' is not assignable to parameter of type 'Date'.
    
    // Generic and non - generic overload where generic overload is the only candidate when called without type arguments
    var s = new fn2(0, '');
    
    // Generic and non - generic overload where non - generic overload is the only candidate when called with type arguments
    new fn2<Date>('', 0); // OK
    
    // Generic and non - generic overload where non - generic overload is the only candidate when called without type arguments
    new fn2('', 0); // OK
    
    // Generic overloads with differing arity called without type arguments
    class fn3<T, U, V> {
        constructor(n: T);
        constructor(s: string, t: T, u: U);
        constructor(v: V, u: U, t: T);
        constructor() { }
    }
    
    new fn3(3);
    new fn3('', 3, '');
    new fn3(5, 5, 5);
    
    // Generic overloads with differing arity called with type arguments matching each overload type parameter count
    new fn3<number>(4); // Error
            ~~~~~~
!!! error TS2558: Expected 3 type arguments, but got 1.
    new fn3<string, string>('', '', '');  // Error
            ~~~~~~~~~~~~~~
!!! error TS2558: Expected 3 type arguments, but got 2.
    new fn3<number, string, string>('', '', 3);
    
    // Generic overloads with differing arity called with type argument count that doesn't match any overload
    new fn3<number, number, number, number>(); // Error
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2558: Expected 3 type arguments, but got 4.
    
    // Generic overloads with constraints called with type arguments that satisfy the constraints
    class fn4<T extends string, U extends number> {
        constructor(n: T, m: U);
        constructor() { }
    }
    new fn4<string, number>('', 3);
    new fn4<string, number>(3, ''); // Error
                            ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    new fn4<number, string>('', 3); // Error
            ~~~~~~
!!! error TS2344: Type 'number' does not satisfy the constraint 'string'.
    new fn4<number, string>(3, ''); // Error
            ~~~~~~
!!! error TS2344: Type 'number' does not satisfy the constraint 'string'.
    
    // Generic overloads with constraints called without type arguments but with types that satisfy the constraints
    new fn4('', 3);
    new fn4(3, ''); // Error
            ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    new fn4(3, undefined); // Error
            ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    new fn4('', null);
                ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'number'.
    
    // Generic overloads with constraints called with type arguments that do not satisfy the constraints
    new fn4<boolean, Date>(null, null); // Error
            ~~~~~~~
!!! error TS2344: Type 'boolean' does not satisfy the constraint 'string'.
    
    // Generic overloads with constraints called without type arguments but with types that do not satisfy the constraints
    new fn4(true, null); // Error
            ~~~~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
    new fn4(null, true); // Error
            ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'string'.
    
    // Non - generic overloads where contextual typing of function arguments has errors
    class fn5 {
        constructor(f: (n: string) => void);
        constructor(f: (n: number) => void);
        constructor() { return undefined; }
                        ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'fn5'.
                        ~~~~~~
!!! error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
    }
    new fn5((n) => n.toFixed());
                     ~~~~~~~
!!! error TS2339: Property 'toFixed' does not exist on type 'string'.
    new fn5((n) => n.substr(0));
    new fn5((n) => n.blah); // Error
                     ~~~~
!!! error TS2339: Property 'blah' does not exist on type 'string'.
    
    
    